--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -57,9 +57,13 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_LINES' "$__BU_MAIN_TXT
 # Ne mettez pas plus d'un caractère si vous ne souhaitez pas voir le texte de chaque header apparaître entre plusieurs lignes (une ligne de chaque caractère).
 __BU_MAIN_TXT_CHAR_HEADER_LINE="-"		# Caractère à afficher en boucle pour créer une ligne des headers de changement d'étapes.
 
+# Since the color global variables are defined in the "Colors.conf" file, AND since this file is already sourced before this file, it's safe to call these global variables.
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_CHAR_HEADER_LINE' "$__BU_MAIN_TXT_CHAR_HEADER_LINE" 'Char' "This global variable stores the default character that composes each lines drawn by the ${__BU_MAIN_COLOR_FUNCTION}BU::Main::Headers::DrawLine${__BU_MAIN_COLOR_RESET} function" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
 # Affichage de chevrons avant une chaîne de caractères (par exemple).
 __BU_MAIN_TXT_PRINT_TAB=">>>>"
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_PRINT_TAB' "$__BU_MAIN_TXT_PRINT_TAB" 'String' "This global variable stores the string which better showcases a string" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -68,8 +72,12 @@ __BU_MAIN_TXT_PRINT_TAB=">>>>"
 # Storing a string got from a specific line (with a function like "BU::Main::Files::GetLineFromTextFile()", from "main/Files.lib" source file).
 __BU_MAIN_TXT_STORE_LINE=""
 
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_LINE' "$__BU_MAIN_TXT_STORE_LINE" 'String' "This global variable stores " "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+
 # Getting the messages printed with the "$__BU_MAIN_STAT_ECHO='true'" status ?
-__BU_MAIN_TXT_STORE_ERROR_MESSAGES_ARRAY=()
+__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY=()
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY' "$__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY" 'Array' "This array stores each error message displayed when the ${__BU_MAIN_COLOR_VAR}${__BU_MAIN_COLOR_VAR}" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
