Renamed every $__BU_MAIN_STAT_COLOR_ global variables, as I intend to add the background coloration

--- a/install/.Bash-utils/config/modules/main/debug.conf
+++ b/install/.Bash-utils/config/modules/main/debug.conf
@@ -10,7 +10,7 @@ function debug()
 
 	#**** Code ****
 	if [ "$__BU_MAIN_STAT_DEBUG" = 'true' ]; then
-		echo -ne "$__BU_MAIN_COLOR_PINK"
+		echo -ne "$__BU_MAIN_COLOR_TXT_PINK"
 
 		for _ in $(eval echo -e "{1..$__BU_MAIN_TXT_COLS}"); do
 			echo -ne "+"
@@ -18,9 +18,9 @@ function debug()
 
 		echo -ne "$__BU_MAIN_COLOR_RESET"; echo -e; echo -e
 
-		echo -e "${__BU_MAIN_COLOR_YELLOW}FUNCTION ${__BU_MAIN_COLOR_PINK}$p_function${__BU_MAIN_COLOR_YELLOW} IN ${__BU_MAIN_COLOR_PINK}$p_file${__BU_MAIN_COLOR_YELLOW}, ON ${__BU_MAIN_COLOR_PINK}$p_line${__BU_MAIN_COLOR_RESET}"
+		echo -e "${__BU_MAIN_COLOR_TXT_YELLOW}FUNCTION ${__BU_MAIN_COLOR_TXT_PINK}$p_function${__BU_MAIN_COLOR_TXT_YELLOW} IN ${__BU_MAIN_COLOR_TXT_PINK}$p_file${__BU_MAIN_COLOR_TXT_YELLOW}, ON ${__BU_MAIN_COLOR_TXT_PINK}$p_line${__BU_MAIN_COLOR_RESET}"
 
-		echo -ne "$__BU_MAIN_COLOR_PINK"
+		echo -ne "$__BU_MAIN_COLOR_TXT_PINK"
 
 		for _ in $(eval echo -e "{1..$__BU_MAIN_TXT_COLS}"); do
                         echo -ne "+"
