--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -91,18 +91,18 @@ printf "%s" "$__BU_MAIN_TXT_FMT_BLINK";         BU::ModuleInit::DisplayInitGloba
 printf "%s" "$__BU_MAIN_TXT_FMT_BLINK_RESET";   BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BLINK_RESET'  "$__BU_MAIN_TXT_FMT_BLINK_RESET"    'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "blink")"     "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
 # Bold
-__BU_MAIN_TXT_FMT_BOLD="$(BU::Main::Status::CheckTextFormat 'bold' '1')";
+__BU_MAIN_TXT_FMT_BOLD="$(BU::Main::Status::CheckTextFormat 'smso' '1')";
 __BU_MAIN_TXT_FMT_BOLD_RESET="$(BU::Main::Status::CheckTextFormat 'rmso' '21')";
 
-printf "%s" "$__BU_MAIN_TXT_FMT_BOLD";          BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BOLD'         "$__BU_MAIN_TXT_FMT_BOLD"       'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "bold")" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
-printf "%s" "$__BU_MAIN_TXT_FMT_BOLD_RESET";    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BOLD_RESET'   "$__BU_MAIN_TXT_FMT_BOLD_RESET" 'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "bold")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
+printf "%s" "$__BU_MAIN_TXT_FMT_BOLD";          BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BOLD'         "$__BU_MAIN_TXT_FMT_BOLD"           'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "bold")" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
+printf "%s" "$__BU_MAIN_TXT_FMT_BOLD_RESET";    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BOLD_RESET'   "$__BU_MAIN_TXT_FMT_BOLD_RESET"     'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "bold")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
 # Dim
 __BU_MAIN_TXT_FMT_DIM="$(BU::Main::Status::CheckTextFormat 'dim' '2')";
 __BU_MAIN_TXT_FMT_DIM_RESET="$(BU::Main::Status::CheckTextFormat '' '22')";
 
-printf "%s" "$__BU_MAIN_TXT_FMT_DIM";       BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_DIM'          "$__BU_MAIN_TXT_FMT_DIM"        'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "dim")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
-printf "%s" "$__BU_MAIN_TXT_FMT_DIM_RESET"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_DIM_RESET'    "$__BU_MAIN_TXT_FMT_DIM_RESET"  'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "dim")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
+printf "%s" "$__BU_MAIN_TXT_FMT_DIM";       BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_DIM'              "$__BU_MAIN_TXT_FMT_DIM"            'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "dim")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
+printf "%s" "$__BU_MAIN_TXT_FMT_DIM_RESET"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_DIM_RESET'        "$__BU_MAIN_TXT_FMT_DIM_RESET"      'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "dim")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
 # Hidden (useful for password typing).
 __BU_MAIN_TXT_FMT_HIDDEN="$(BU::Main::Status::CheckTextFormat '' '8')";
