--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -21,7 +21,7 @@
 
 #### PROJECT'S VARIABLES
 
-## PROJECT'S PATH VARIABLES
+## PROJECT'S PATHS VARIABLES
 
 # Script file's informations
 __BU_MAIN_PROJECT_FILE_NAME=$(basename "$0");                    # Project file's name.
@@ -72,27 +72,46 @@ fi
 # Project's file path.
 __BU_MAIN_PROJECT_FILE_PATH="$(GetProjectFilePath "$__BU_MAIN_PROJECT_FILE_NAME")"; echo "$__BU_MAIN_PROJECT_FILE_PATH"
 
+
+# -------
+
 # Defining the project's log file's parent directory path.
+# __BU_MAIN_PROJECT_LOG_DIR_PARENT  --> Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PATH"
+# __BU_MAIN_PROJECT_LOG_DIR_NAME    --> Default --> "logs"
+# __BU_MAIN_PROJECT_LOG_DIR_PATH    --> Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PATH/$__BU_MAIN_PROJECT_LOG_DIR_NAME"
+
 __BU_MAIN_PROJECT_LOG_DIR_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH";
-__BU_MAIN_PROJECT_LOG_DIR_NAME="logs";												  	# Default --> "logs"
-__BU_MAIN_PROJECT_LOG_DIR_PATH="$__BU_MAIN_PROJECT_LOG_DIR_PARENT/$__BU_MAIN_PROJECT_LOG_DIR_NAME"; # Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PATH/$__BU_MAIN_PROJECT_LOG_DIR_NAME"
+__BU_MAIN_PROJECT_LOG_DIR_NAME="logs";
+__BU_MAIN_PROJECT_LOG_DIR_PATH="$__BU_MAIN_PROJECT_LOG_DIR_PARENT/$__BU_MAIN_PROJECT_LOG_DIR_NAME";
 
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_PARENT' "$__BU_MAIN_PROJECT_LOG_DIR_PARENT"   'Dirpath'	"This global variable stores the path to the parent directory of the project's log file's directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_NAME' "$__BU_MAIN_PROJECT_LOG_DIR_NAME"       'Dir'		"This global variable stores the name of the parent directory of the project's log file's directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_PATH' "$__BU_MAIN_PROJECT_LOG_DIR_PATH"       'Dirpath'	"This global variable stores the path to the parent directory of the project's log file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 
 
+# -------
+
 # Defining the project's log file's path.
+# __BU_MAIN_PROJECT_LOG_FILE_PARENT --> Default --> "$__BU_MAIN_PROJECT_LOG_DIR_PATH"
+# __BU_MAIN_PROJECT_LOG_FILE_NAME   --> Default --> "$__BU_MAIN_PROJECT_NAME.log"
+# __BU_MAIN_PROJECT_LOG_FILE_PATH   --> Default --> "$__BU_MAIN_PROJECT_LOG_FILE_PARENT/$__BU_MAIN_PROJECT_LOG_FILE_NAME"
+
 __BU_MAIN_PROJECT_LOG_FILE_PARENT="$__BU_MAIN_PROJECT_LOG_DIR_PATH";
-__BU_MAIN_PROJECT_LOG_FILE_NAME="$__BU_MAIN_PROJECT_NAME.log";                                     # Default --> "$__BU_MAIN_PROJECT_NAME.log"
-__BU_MAIN_PROJECT_LOG_FILE_PATH="$__BU_MAIN_PROJECT_LOG_FILE_PARENT/$__BU_MAIN_PROJECT_LOG_FILE_NAME";  # Default --> "$__BU_MAIN_PROJECT_LOG_DIR_PATH/$__BU_MAIN_PROJECT_LOG_FILE_NAME"
+__BU_MAIN_PROJECT_LOG_FILE_NAME="$__BU_MAIN_PROJECT_NAME.log";
+__BU_MAIN_PROJECT_LOG_FILE_PATH="$__BU_MAIN_PROJECT_LOG_FILE_PARENT/$__BU_MAIN_PROJECT_LOG_FILE_NAME";
 
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_PARENT' "$__BU_MAIN_PROJECT_LOG_FILE_PARENT" 'Dirpath'	"This global variable stores the path to the project's log file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_NAME' "$__BU_MAIN_PROJECT_LOG_FILE_NAME"     'File'		"This global variable stores the name of the project's log file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_PATH' "$__BU_MAIN_PROJECT_LOG_FILE_PATH"     'FilePath'	"This global variable stores the path to the project's log path" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 
 
+# -------
+
 # Defining the project's "BU::Echo<...>()" functions debug output (to have a better view during a "bash - x" debug).
+# __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT --> Default --> "$__BU_MAIN_PROJECT_LOG_DIR_PATH"
+# __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME   --> Default --> "echo_output.log"
+# __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH   --> Default --> "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT/$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME"
+
 __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT="$__BU_MAIN_PROJECT_LOG_DIR_PATH";
 __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME="echo_output.log";
 __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH="$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT/$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME";
@@ -102,13 +121,19 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_N
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH"     'Filepath'	"This global variable stores the path to the echo debugging file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 
 
-# Defining the project's color code storage file.
-__BU_MAIN_PROJECT_COLOR_CODE_FILE_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH";
-__BU_MAIN_PROJECT_COLOR_CODE_FILE_NAME="colors.tmp";
-__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH="$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_CODE_FILE_NAME";
+# -------
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_CODE_FILE_PARENT' "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PARENT"   'Dirpath'	"This global variable stores the path to the Decho color code file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_CODE_FILE_NAME' "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_NAME"       'File'		"This global variable stores the name of the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH' "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH"       'Filepath'	"This global variable stores the path to the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+# Defining the project's color code storage file.
+# __BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT --> Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PATH"
+# __BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME   --> Default --> "colors.tmp"
+# __BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH   --> Default --> "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME"
+
+__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH";
+__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME="colors.tmp";
+__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH="$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME";
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT' "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT"   'Dirpath'	"This global variable stores the path to the Decho color code file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME' "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME"       'File'		"This global variable stores the name of the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH' "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH"       'Filepath'	"This global variable stores the path to the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 
 # -----------------------------------------------
