--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -13,6 +13,8 @@
 
 ## FUNCTIONS
 
+# 
+
 # Writing the color code into a file, to be processed by any function which needs to know what is the current text color.
 function BU::Main::ModConfig::Colors::CheckTextColor()
 {
@@ -24,13 +26,13 @@ function BU::Main::ModConfig::Colors::CheckTextColor()
         if command -v tput &> /dev/null; then
             tput setaf "$1" || { echo -ne "\e[38;5;$1m" && return 0; }
  
-#            if ! BU::Main::Checkings::CheckProjectRelatedFile "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PARENT" "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_NAME" "f"; then
- #               BU::Main::Errors::HandleSmallErrors 'E' "Unable to create the $(BU::Decho "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH") file" 'E' 'CPLS'
+#            if ! BU::Main::Checkings::CheckProjectRelatedFile "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT" "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME" "f"; then
+ #               BU::Main::Errors::HandleSmallErrors 'E' "Unable to create the $(BU::Decho "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH") file" 'E' 'CPLS'
   #          fi
 
-            echo "$1" > "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH";
+            echo "$1" > "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH";
             [ "$?" -ne 0 ] && {
-                echo -e >&2; echo -e "The $(BU::Main::Checkings::CheckFilePathExists "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH") (color.tmp) file doesn't exists" >&2; echo -e >&2;
+                echo -e >&2; echo -e "The $(BU::Main::Checkings::CheckFilePathExists "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH") (color.tmp) file doesn't exists" >&2; echo -e >&2;
 
                 return 1
 
@@ -304,4 +306,4 @@ printf "%s" "$__BU_MAIN_COLOR_RESET";       BU::ModuleInit::DisplayInitGlobalVar
 
 ## BACKGROUND ENCODING
 
-__BU_MAIN_
+__BU_MAIN_COLOR_BG_
