--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -58,7 +58,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_LINES' "$__BU_MAIN_TXT
 __BU_MAIN_TXT_CHAR_HEADER_LINE="-"		# Caractère à afficher en boucle pour créer une ligne des headers de changement d'étapes.
 
 # Since the color global variables are defined in the "Colors.conf" file, AND since this file is already sourced before this file, it's safe to call these global variables.
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_CHAR_HEADER_LINE' "$__BU_MAIN_TXT_CHAR_HEADER_LINE" 'Char' "This global variable stores the default character that composes each lines drawn by the ${__BU_MAIN_COLOR_FUNCTION}BU::Main::Headers::DrawLine${__BU_MAIN_COLOR_RESET} function" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_CHAR_HEADER_LINE' "$__BU_MAIN_TXT_CHAR_HEADER_LINE" 'Char' "This global variable stores the default character that composes each lines drawn by the ${__BU_MAIN_COLOR_TXT_FUNCTION}BU::Main::Headers::DrawLine${__BU_MAIN_COLOR_TXT_RESET} function" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
 # Affichage de chevrons avant une chaîne de caractères (par exemple).
 __BU_MAIN_TXT_PRINT_TAB=">>>>"
@@ -77,7 +77,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_LINE' "$__BU_MAI
 # Getting the messages printed with the "$__BU_MAIN_STAT_ECHO='true'" status ?
 __BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY=()
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY' "$__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY" 'Array' "This array stores each error message displayed when the ${__BU_MAIN_COLOR_VAR}\$__BU_MAIN_STAT_ECHO${__BU_MAIN_COLOR_VAR} global status variable's value is set to ${__BU_MAIN_COLOR_VAR}true${__BU_MAIN_COLOR_RESET}" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY' "$__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY" 'Array' "This array stores each error message displayed when the ${__BU_MAIN_COLOR_TXT_VAR}\$__BU_MAIN_STAT_ECHO${__BU_MAIN_COLOR_TXT_VAR} global status variable's value is set to ${__BU_MAIN_COLOR_TXT_VAR}true${__BU_MAIN_COLOR_TXT_RESET}" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
