--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -258,7 +258,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILES_PATH_ARRA
 __BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY=();
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the path of each SOURCED « main » module's configuration files" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
-# Storing the configuration files path variable values into an array to source, print and add easier into the "a_config_files_path" associative array.
+# Storing the configuration files path variable values into an array to source, print and add easier into the "$__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY" associative array.
 # Those files are, respectly, the :
 #   - Project's and initialization process global variable
 #   - Project's status variable
