Adding text background coloration

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -125,11 +125,11 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_P
 
 # Defining the project's color code storage file.
 # __BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT --> Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PATH"
-# __BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME   --> Default --> "colors.tmp"
+# __BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME   --> Default --> "fgcolors.tmp"
 # __BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH   --> Default --> "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME"
 
 __BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH";
-__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME="colors.tmp";
+__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME="fgcolors.tmp";
 __BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH="$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME";
 
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT' "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT"   'Dirpath'	"This global variable stores the path to the Decho color code file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
