--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -14,6 +14,31 @@
 ## FUNCTIONS
 
 # 
+function BU::Main::ModConfig::Colors::CheckBGColor()
+{
+	#**** Parameters ****
+	# $1 --> Color code
+
+	#**** Code ****
+    # If the script is allowed to format text.
+    if BU::Main::Status::CheckStatAllowFormatting; then
+        if command -v tput &> /dev/null; then
+            tput setab "$1" || { echo -ne "\e[" && return 0; }
+
+            echo "$1" > "$__BU_MAIN_PROJECT_BG_COLOR_CODE_FILE_PATH";
+
+            [ "$?" -ne 0 ] && {
+                echo -e >&2; echo -e "The $(BU::Main::Checkings::CheckFilePathExists "$__BU_MAIN_PROJECT_BG_COLOR_CODE_FILE_PATH") (bgcolors.tmp) file doesn't exists" >&2; echo -e >&2;
+
+                exit 1;
+            }
+        else
+            echo -ne "\e["; return 0;
+        fi
+    else
+        return 1;
+    fi
+}
 
 # Writing the color code into a file, to be processed by any function which needs to know what is the current text color.
 function BU::Main::ModConfig::Colors::CheckTextColor()
@@ -22,7 +47,8 @@ function BU::Main::ModConfig::Colors::CheckTextColor()
 	# $1 --> Color code
 
 	#**** Code ****
-	if BU::Main::Status::CheckTextFormat; then
+    # If the script is allowed to format text.
+	if BU::Main::Status::CheckStatAllowFormatting; then
         if command -v tput &> /dev/null; then
             tput setaf "$1" || { echo -ne "\e[38;5;$1m" && return 0; }
  
@@ -31,18 +57,17 @@ function BU::Main::ModConfig::Colors::CheckTextColor()
   #          fi
 
             echo "$1" > "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH";
+
             [ "$?" -ne 0 ] && {
-                echo -e >&2; echo -e "The $(BU::Main::Checkings::CheckFilePathExists "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH") (color.tmp) file doesn't exists" >&2; echo -e >&2;
+                echo -e >&2; echo -e "The $(BU::Main::Checkings::CheckFilePathExists "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH") (fgcolors.tmp) file doesn't exists" >&2; echo -e >&2;
 
-                return 1
-
-                kill "$$"
-                }
+                exit 1;
+            }
         else
             echo -ne "\e[38;5;$1m"; return 0;
         fi
     else
-        return 1
+        return 1;
     fi
 }
 
