--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -220,10 +220,12 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILE_INITIALIZE
 # -----------------------------------------------
 
  ## "functions" FOLDER'S SUB-FOLDERS CONTENT.
+ 
+# Note : if a variable is an array, please leave empty the second argument of the "BU::ModuleInit::DisplayInitGlobalVarsInfos()" function.
 
 # Main module's library functions folder's path.
 __BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_MAIN_MODULE_LIB_MOD_DIR_PATH/"*.lib);
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY" 'Array' "This array stores the path of each « main » module's functions folder's library « .lib » file TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « main » module's functions folder's library « .lib » file TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 
 # -----------------------------------------------
 
@@ -234,13 +236,15 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILES_PAT
 
 ## INITIALIZATION VARIABLES DECLARATIONS
 
+# Note : if a variable is an array, please leave empty the second argument of the "BU::ModuleInit::DisplayInitGlobalVarsInfos()" function.
+
 # Defining an array of parameters in order to store the modified global status variables values,
 # in order to check which status variables values have to be changed to their new default value,
 # after the main module's initialization.
 
 # It MUST NOT store any value.
 __BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY=()
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY' "$__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the global status variables values modified as the « main » module's by the user" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY' "" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the global status variables values modified as the « main » module's by the user" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # -----------------------------------------------
 
@@ -248,7 +252,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_MODIFIED_STATUS_VAR
 
 # Defining an associative array to store each sourced library file's path.
 __BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY=();
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the path of each SOURCED « main » module's library files" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY' "" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the path of each SOURCED « main » module's library files" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # -----------------------------------------------
 
@@ -256,7 +260,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILES_PATH_ARRA
 
 # Defining an associative array to store each sourced configuration file's path.
 __BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY=();
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the path of each SOURCED « main » module's configuration files" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY' "" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the path of each SOURCED « main » module's configuration files" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Storing the configuration files path variable values into an array to source, print and add easier into the "a_config_files_path" associative array.
 # Those files are, respectly, the :
@@ -277,7 +281,7 @@ __BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY+=("$__BU_MAIN_MODULE_CONF_INIT_FIL
     "$__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH" \
     "$__BU_MAIN_MODULE_CONF_TIME_FILE_PATH");
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY" 'Array' "This array stores the path of each « main » module's configuration files TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))" "${__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY[@]}";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « main » module's configuration files TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))" "${__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY[@]}";
 
 # -----------------------------------------------
 
