--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -75,9 +75,9 @@ __BU_MAIN_TXT_STORE_LINE=""
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_LINE' "$__BU_MAIN_TXT_STORE_LINE" 'String' "This global variable stores a string extracted from a line in a file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Getting the messages printed with the "$__BU_MAIN_STAT_ECHO='true'" status ?
-__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY=()
+__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY=();    # Note : since this variable is an array, please leave empty the second argument of the "BU::ModuleInit::DisplayInitGlobalVarsInfos()" function.
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY' "$__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY" 'Array' "This array stores each error message displayed when the ${__BU_MAIN_COLOR_TXT_VAR}\$__BU_MAIN_STAT_ECHO${__BU_MAIN_COLOR_TXT_VAR} global status variable's value is set to ${__BU_MAIN_COLOR_TXT_VAR}true${__BU_MAIN_COLOR_TXT_RESET}" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY' "" 'Array' "This array stores each error message displayed when the ${__BU_MAIN_COLOR_TXT_VAR}\$__BU_MAIN_STAT_ECHO${__BU_MAIN_COLOR_TXT_RESET} global status variable's value is set to ${__BU_MAIN_COLOR_TXT_VAR}true${__BU_MAIN_COLOR_TXT_RESET}" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -91,12 +91,12 @@ printf "%s" "$__BU_MAIN_TXT_FMT_BLINK";         BU::ModuleInit::DisplayInitGloba
 printf "%s" "$__BU_MAIN_TXT_FMT_BLINK_RESET";   BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BLINK_RESET'  "$__BU_MAIN_TXT_FMT_BLINK_RESET"    'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "blink")"     "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
 # Bold
-__BU_MAIN_TXT_FMT_BOLD="$(BU::Main::Status::CheckTextFormat 'smso' '1')";
+__BU_MAIN_TXT_FMT_BOLD="$(BU::Main::Status::CheckTextFormat 'bold' '1')";
 __BU_MAIN_TXT_FMT_BOLD_RESET="$(BU::Main::Status::CheckTextFormat 'rmso' '21')";
 
 printf "%s" "$__BU_MAIN_TXT_FMT_BOLD";          BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BOLD'         "$__BU_MAIN_TXT_FMT_BOLD"           'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "bold")" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 printf "%s" "$__BU_MAIN_TXT_FMT_BOLD_RESET";    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BOLD_RESET'   "$__BU_MAIN_TXT_FMT_BOLD_RESET"     'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "bold")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
-
+ exit 0;
 # Dim
 __BU_MAIN_TXT_FMT_DIM="$(BU::Main::Status::CheckTextFormat 'dim' '2')";
 __BU_MAIN_TXT_FMT_DIM_RESET="$(BU::Main::Status::CheckTextFormat '' '22')";
